Fix: add text-overflow to social item

--- a/source/styles/_partial/aboutme.styl
+++ b/source/styles/_partial/aboutme.styl
@@ -44,6 +44,12 @@
 .social-item
   margin-bottom 1rem
 
+  @media mq-mobile
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 18rem;
+
   .label
     width 2rem
     height 2rem
